are described in a new vignette, "Variant and Genotype Calling in Highly
Duplicated Genomes" (isolocus_sorting.Rmd).  The functions readProcessSamMulti
and readProcessIsoloci have been added for import of data from the Python
scripts into polyRAD.

A Python script has been added to help identify full tag sequences for alleles
imported from TASSEL-GBSv2 using VCF2RADdata.

A bug has been fixed in SubsetByPloidy.

MergeTaxaDepth now generates a more useful error if taxa are specified that
do not exist in the object.

The AddDepthSamplingPermutations function has been added.  Permutations for
estimating genotype likelihoods are no longer calculated at the time of data
import, but instead are calculated the first time that genotype likelihoods
are calculated.  This is to avoid unnessasary calculation and recalculation
when alleles and taxa are filtered or merged before running genotype calling.
From the user perspective, there isn't any change except faster import.

The EstimateParentalGenotypes function has been added, using code that was
previously in the AddGenotypePriorProb_Mapping2Parents.  This does not
impact anything frin the user's perspective, but makes the code slightly
less unweildy and allows parental genotype estimations to be used for other
purposes.

Internal functions for simulating gametes and calculating their frequencies have
been corrected so that they still work when only one allele is being simulated.

## Changes in v1.1 ##

A plot method has been added for RADdata objects.

The MergeTaxaDepth, RemoveUngenotypedLoci, and SubsetByPloidy utility functions
have been added.

The Export_MAPpoly and Export_GWASpoly functions have been added.

Bug fixes have been made in TestOverdispersion, VCF2RADdata, SubsetByLocus,
and SubsetByTaxon.

Some code in AddAlleleFreqByTaxa has been translated to Rcpp to speed
computation time for IteratePopStruct and IteratePopStructLD.

## Changes in v1.0 ##
